udpated the api url to include forecast parameter

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <form action="https://api.openweathermap.org/data/2.5/weather?" id="search-form">
             <label for="city-input">Search for a City:</label>
             <input type="search" placeholder="City" id="city-input" name="q">
-            <button id="serach-btn">Search</button>
+            <button id="search-btn">Search</button>
         </form>
 
         <div class="list-group" id="city-list">
