--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
 <body>
     <header>
         <h1>Local Weather Forecast</h1>
-    </header>
-
-    <main>
-        <form action="https://api.openweathermap.org/data/2.5/weather?" id="search-form">
+        <form action="https://api.openweathermap.org/data/2.5/weather?" id="search-form" class="text-start">
             <label for="city-input">Search for a City:</label>
             <input type="search" placeholder="City" id="city-input" name="q">
             <button id="search-btn">Search</button>
         </form>
+    </header>
+
+    <main>
+        
 
         <div class="list-group" id="city-list">
             <button type="button" class="list-group-item list-group-item-action">
@@ -43,6 +44,35 @@
             <button type="button" class="list-group-item list-group-item-action">City 4</button>
             <button type="button" class="list-group-item list-group-item-action">City 5</button>
         </div>
+
+        <div class="container" id="forecast-display">
+            <div class="row w-100">
+              <div class="col text-center" id="current-weather">
+
+                <!-- A card was inserted into the container -->
+                <div class="card" style="width: 18rem;">
+                    <h5 class="card-title">Current Weather Conditions</h5>
+                    <img src="#" class="card-img-top" alt="icon goes here">
+                    <div class="card-body">
+                      
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                    </div>
+                  </div>
+              </div>
+              <!-- End of Card Current Conditions -->
+
+              <div class="col text-center" id="future1">
+                Tomorrow
+              </div>
+              <div class="col text-center" id="future2">
+                Day 2
+              </div>
+              <div class="col text-center" id="future3">
+               Day 3
+              </div>
+            </div>
+          </div>
 
     </main>
 
