added feature to write search values to buttons

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
     <main>
 
 
-        <div class="list-group w-25 mt-3" id="city-list">
-            <button type="button" class="list-group-item list-group-item-action mb-2">
+        <ul class="list-group w-25 mt-3" id="city-list">
+            <button type="button" class="list-group-item list-group-item-action mb-2 text-center">
                 City 1
             </button>
-            <button type="button" class="list-group-item list-group-item-action mt-2 mb-2">City 2</button>
-            <button type="button" class="list-group-item list-group-item-action mt-2 mb-2">City 3</button>
-            <button type="button" class="list-group-item list-group-item-action mt-2 mb-2">City 4</button>
-            <button type="button" class="list-group-item list-group-item-action mt-2 mb-2">City 5</button>
-        </div>
+            <button type="button" class="list-group-item list-group-item-action mt-2 mb-2 text-center">City 2</button>
+            <button type="button" class="list-group-item list-group-item-action mt-2 mb-2 text-center">City 3</button>
+            <button type="button" class="list-group-item list-group-item-action mt-2 mb-2 text-center">City 4</button>
+            <button type="button" class="list-group-item list-group-item-action mt-2 mb-2 text-center">City 5</button>
+        </ul>
 
-        <div class="container" id="forecast-display">
+        <section class="container" id="forecast-display">
             <div class="row w-100">
                 <div class="col text-center" id="current-weather">
 
@@ -110,7 +110,7 @@
                 </div>
 
             </div>
-        </div>
+        </section>
         
 
     </main>
