--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
     </header>
 
     <main id="main">
+        <!-- The container fluid class had to be added here to allow the content to display across the full width of the viewport. -->
         <div class="container-fluid m-0" id="container1">
-            <div class="row" id="forecast-row">
-                <ul class="list-group mt-3 col-2" id="city-list">
+
+            <!-- No wrap was set on the row to allow both the list and the buttons to display within the same line on medium screens and above.  On smaller screens the elements will wrap to a new line. -->
+            <div class="row flex-md-nowrap" id="forecast-row">
+
+                <!-- The columns were set to use medium two here to set them to only two columns on screens medium size and above.  On smaller screens it will break to display the full width of the screen. -->
+                <ul class="list-group mt-3 col-md-2" id="city-list">
                     <button type="button" class="list-group-item list-group-item-action mb-2 text-center">
                         City 1
                     </button>
