updated getWeather arguments

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="col text-center" id="current-weather">
                             <!-- A card was inserted into the container -->
                             <div class="card" style="width: 18rem;">
-                                <h5 class="card-title">Current Weather Conditions</h5>
+                                <h3 class="card-title">Current Weather Conditions</h3>
                                 <img src="#" class="card-img-top" alt="icon goes here">
                                 <div class="card-body">
 
@@ -71,7 +71,7 @@
                         <div class="col text-center" id="future1">
                             <!-- Card 2 inserted here -->
                             <div class="card" style="width: 18rem;">
-                                <h5 class="card-title">Tomorrow</h5>
+                                <h3 class="card-title">Tomorrow</h3>
                                 <img src="#" class="card-img-top" alt="icon goes here">
                                 <div class="card-body">
 
@@ -87,7 +87,7 @@
                         <div class="col text-center" id="future2">
                             <!-- Card 3 inserted here -->
                             <div class="card" style="width: 18rem;">
-                                <h5 class="card-title">Day 2</h5>
+                                <h3 class="card-title">Day 2</h3>
                                 <img src="#" class="card-img-top" alt="icon goes here">
                                 <div class="card-body">
 
@@ -102,7 +102,7 @@
                         <div class="col text-center" id="future3">
                             <!-- Card 4 inserted here -->
                             <div class="card" style="width: 18rem;">
-                                <h5 class="card-title">Day 3</h5>
+                                <h3 class="card-title">Day 3</h3>
                                 <img src="#" class="card-img-top" alt="icon goes here">
                                 <div class="card-body">
 
@@ -142,5 +142,7 @@
 
     <script src="./assets/scripts/script.js"></script>
 </body>
+
+<footer></footer>
 
 </html>
