updated functions to write city name to display

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div id="forecast-display col">
                     <!-- The width property is needed here to work with the container fluid property that allows the content to stretch across the screen, but overflows the area.  This limits the element to make it display on screen. -->
                     <div class="row p-4 w-75">
-                        <div class="col text-center" id="current-weather">
+                        <div class="col text-center" id="display-current-weather">
                             <!-- A card was inserted into the container -->
                             <div class="card" style="width: 18rem;">
                                 <h3 class="card-title">Current Weather Conditions</h3>
