udpated currentForecast function to write data to the DOM

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                                 <h3 class="card-title">Current Weather Conditions</h3>
                                 <img src="#" class="card-img-top" alt="icon goes here">
                                 <div class="card-body">
-
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                        of the card's content.</p>
+                                    <p class="current"></p>
+                                    <p class="high"></p>
+                                    <p class="low"></p>
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
@@ -77,6 +77,10 @@
 
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                         of the card's content.</p>
+                                        <p class="current"></p>
+                                        <p class="high"></p>
+                                        <p class="low"></p>
+                                    
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
@@ -93,6 +97,9 @@
 
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                         of the card's content.</p>
+                                    <p class="current"></p>
+                                    <p class="high"></p>
+                                    <p class="low"></p>
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
@@ -108,6 +115,9 @@
 
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                         of the card's content.</p>
+                                    <p class="current"></p>
+                                    <p class="high"></p>
+                                    <p class="low"></p>
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
