--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div class="container-fluid m-0" id="container1">
 
             <!-- No wrap was set on the row to allow both the list and the buttons to display within the same line on medium screens and above.  On smaller screens the elements will wrap to a new line. -->
-            <div class="row flex-md-nowrap" id="forecast-row">
+            <div class="row flex-lg-nowrap" id="forecast-row">
 
                 <!-- The columns were set to use medium two here to set them to only two columns on screens medium size and above.  On smaller screens it will break to display the full width of the screen. -->
-                <ul class="list-group mt-3 col-md-2" id="city-list">
+                <ul class="list-group mt-3 col-lg-2" id="city-list">
                     <button type="button" class="list-group-item list-group-item-action mb-2 text-center">
                         City 1
                     </button>
@@ -58,6 +58,7 @@
                             <div class="card" style="width: 18rem;">
                                 <h3 class="card-title">Current Weather Conditions</h3>
                                 <img src="#" class="card-img-top" alt="icon goes here">
+                                <p class="description"></p>
                                 <div class="card-body">
                                     <p class="current"></p>
                                     <p class="high"></p>
