added api fetch for current weather

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row flex-lg-nowrap" id="forecast-row">
 
                 <!-- The columns were set to use medium two here to set them to only two columns on screens medium size and above.  On smaller screens it will break to display the full width of the screen. -->
-                <ul class="list-group mt-3 col-lg-2" id="city-list">
+                <ul class="list-group mt-3 ms-2 align-middlecol-lg-2 col-lg-2" id="city-list">
                     <button type="button" class="list-group-item list-group-item-action mb-2 text-center">
                         City 1
                     </button>
@@ -61,6 +61,7 @@
                                 <p class="description"></p>
                                 <div class="card-body">
                                     <p class="current"></p>
+                                    <p class="feels-like"></p>
                                     <p class="high"></p>
                                     <p class="low"></p>
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
