added icon display

--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
                 </ul>
 
                 <div id="forecast-display col">
+                    <h2 class="city-name text-center">Name of City</h2>
                     <!-- The width property is needed here to work with the container fluid property that allows the content to stretch across the screen, but overflows the area.  This limits the element to make it display on screen. -->
                     <div class="row p-4 w-75">
                         <div class="col text-center" id="display-current-weather">
                             <!-- A card was inserted into the container -->
                             <div class="card" style="width: 18rem;">
                                 <h3 class="card-title">Current Weather Conditions</h3>
-                                <img src="#" class="card-img-top" alt="icon goes here">
+                                <img src="" class="card-img-top icon" alt="icon goes here">
                                 <p class="description"></p>
                                 <div class="card-body">
                                     <p class="current"></p>
