updated style of display cards

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <!-- A card was inserted into the container -->
                             <div class="card" style="width: 18rem;">
                                 <h3 class="card-title">Current Weather Conditions</h3>
-                                <img src="" class="card-img-top icon" alt="icon goes here">
+                                <img src="" class="card-img-top icon" alt="weather icon">
                                 <p class="description"></p>
                                 <div class="card-body">
                                     <p class="current"></p>
@@ -71,19 +71,19 @@
                         </div>
                         <!-- End of Card Current Conditions -->
 
-                        <div class="col text-center" id="future1">
+                        <div class="col-xl-4 text-center" id="future1">
                             <!-- Card 2 inserted here -->
                             <div class="card" style="width: 18rem;">
                                 <h3 class="card-title">Tomorrow</h3>
-                                <img src="#" class="card-img-top" alt="icon goes here">
+                                <img src="" class="card-img-top icon" alt="icon goes here">
                                 <div class="card-body">
 
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                         of the card's content.</p>
-                                        <p class="current"></p>
                                         <p class="high"></p>
                                         <p class="low"></p>
-                                    
+                                        <p class="humidty"></p>
+                                        <p class="wind-speed"></p>                                    
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
@@ -91,41 +91,82 @@
                         </div>
 
 
-                        <div class="col text-center" id="future2">
+                        <div class="col-xl-4 text-center" id="future2">
                             <!-- Card 3 inserted here -->
                             <div class="card" style="width: 18rem;">
-                                <h3 class="card-title">Day 2</h3>
-                                <img src="#" class="card-img-top" alt="icon goes here">
+                                <h3 class="card-title">Day 3</h3>
+                                <img src="" class="card-img-top icon" alt="icon goes here">
                                 <div class="card-body">
 
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                         of the card's content.</p>
-                                    <p class="current"></p>
-                                    <p class="high"></p>
-                                    <p class="low"></p>
+                                        <p class="high"></p>
+                                        <p class="low"></p>
+                                        <p class="humidty"></p>
+                                        <p class="wind-speed"></p>
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
                             <!-- End card 3 -->
                         </div>
 
-                        <div class="col text-center" id="future3">
+                        <div class="col-xl-4 text-center" id="future3">
                             <!-- Card 4 inserted here -->
                             <div class="card" style="width: 18rem;">
-                                <h3 class="card-title">Day 3</h3>
-                                <img src="#" class="card-img-top" alt="icon goes here">
+                                <h3 class="card-title">Day 4</h3>
+                                <img src="" class="card-img-top icon" alt="icon goes here">
                                 <div class="card-body">
 
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                         of the card's content.</p>
-                                    <p class="current"></p>
-                                    <p class="high"></p>
-                                    <p class="low"></p>
+                                        <p class="high"></p>
+                                        <p class="low"></p>
+                                        <p class="humidty"></p>
+                                        <p class="wind-speed"></p>
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
                             <!-- End card 4 -->
                         </div>
+
+                        <div class="col-xl-4 text-center" id="future5">
+                            <!-- Card 4 inserted here -->
+                            <div class="card" style="width: 18rem;">
+                                <h3 class="card-title">Day 5</h3>
+                                <img src="" class="card-img-top icon" alt="icon goes here">
+                                <div class="card-body">
+
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                        of the card's content.</p>
+                                        <p class="high"></p>
+                                        <p class="low"></p>
+                                        <p class="humidty"></p>
+                                        <p class="wind-speed"></p>
+                                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                                </div>
+                            </div>
+                            <!-- End card 5 -->
+                        </div>
+
+                        <div class="col-xl-4 text-center" id="future6">
+                            <!-- Card 4 inserted here -->
+                            <div class="card" style="width: 18rem;">
+                                <h3 class="card-title">Day 6</h3>
+                                <img src="" class="card-img-top icon" alt="icon goes here">
+                                <div class="card-body">
+
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                        of the card's content.</p>
+                                        <p class="high"></p>
+                                        <p class="low"></p>
+                                        <p class="humidty"></p>
+                                        <p class="wind-speed"></p>
+                                    <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                                </div>
+                            </div>
+                            <!-- End card 6 -->
+                        </div>
+
                     </div>
                 </div>
 
