added element to display icon with description

--- a/index.html
+++ b/index.html
@@ -51,20 +51,25 @@
                 </ul>
 
                 <div id="forecast-display col">
-                    <h2 class="city-name text-center">Name of City</h2>
+                    <!-- <h2 class="city-name text-center">Name of City</h2> -->
                     <!-- The width property is needed here to work with the container fluid property that allows the content to stretch across the screen, but overflows the area.  This limits the element to make it display on screen. -->
                     <div class="row p-4 w-75">
-                        <div class="col text-center" id="display-current-weather">
+                        <div class="col text-center forecast-card" id="display-current-weather">
                             <!-- A card was inserted into the container -->
                             <div class="card" style="width: 18rem;">
                                 <h3 class="card-title">Current Weather Conditions</h3>
-                                <img src="" class="card-img-top icon" alt="weather icon">
-                                <p class="description"></p>
+                                <p class="date-time"></p>
+                                <!-- <img src="" class="card-img-top icon" alt="weather icon"> -->
+                                <span><p class="description"></p>
+                                <img class="icon" src="" width="50" height="50"></span>
+                                
                                 <div class="card-body">
                                     <p class="current"></p>
                                     <p class="feels-like"></p>
                                     <p class="high"></p>
                                     <p class="low"></p>
+                                    <p class="humidity"></p>
+                                    <p class="wind-speed"></p>
                                     <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
@@ -78,8 +83,7 @@
                                 <img src="" class="card-img-top icon" alt="icon goes here">
                                 <div class="card-body">
 
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                        of the card's content.</p>
+                                    <p class="card-text"></p>
                                         <p class="high"></p>
                                         <p class="low"></p>
                                         <p class="humidty"></p>
@@ -98,8 +102,7 @@
                                 <img src="" class="card-img-top icon" alt="icon goes here">
                                 <div class="card-body">
 
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                        of the card's content.</p>
+                                    <p class="card-text"></p>
                                         <p class="high"></p>
                                         <p class="low"></p>
                                         <p class="humidty"></p>
@@ -117,8 +120,7 @@
                                 <img src="" class="card-img-top icon" alt="icon goes here">
                                 <div class="card-body">
 
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                        of the card's content.</p>
+                                    <p class="card-text"></p>
                                         <p class="high"></p>
                                         <p class="low"></p>
                                         <p class="humidty"></p>
@@ -136,8 +138,7 @@
                                 <img src="" class="card-img-top icon" alt="icon goes here">
                                 <div class="card-body">
 
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                        of the card's content.</p>
+                                    <p class="card-text"></p>
                                         <p class="high"></p>
                                         <p class="low"></p>
                                         <p class="humidty"></p>
@@ -155,8 +156,7 @@
                                 <img src="" class="card-img-top icon" alt="icon goes here">
                                 <div class="card-body">
 
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                        of the card's content.</p>
+                                    <p class="card-text"></p>
                                         <p class="high"></p>
                                         <p class="low"></p>
                                         <p class="humidty"></p>
