added forecast API call to city buttons

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                             <div class="card" style="width: 18rem;">
                                 <h3 class="card-title">Current Weather Conditions</h3>
                                 <p class="date-time"></p>
-                                <span><p class="description"></p>
-                                <img class="icon" src=""></span>
+                                <span><img class="icon" src=""></span>
+                                <p class="description"></p>
+                                
                                 
                                 <div class="card-body">
                                     <p class="current"></p>
