--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Local Weather Forecast</h1>
         <form action="https://api.openweathermap.org/data/2.5/weather?" id="search-form" class="text-start">
             <label for="city-input">Search for a City:</label>
-            <input type="search" placeholder="City" id="city-input" name="q" >
+            <input type="search" placeholder="City" id="city-input" name="q">
             <button id="search-btn">Search</button>
         </form>
     </header>
@@ -90,103 +90,104 @@
             </section>
 
             <section>
+                <h2>Extended Forecast</h2>
                 <div class="row justify-content-center">
-                <div class="col-xl-2 text-center future" id="day1">
-                    <!-- Card 2 inserted here -->
-                    <div class="card" style="width: 18rem;">
-                        <h3 class="card-title">Tomorrow</h3>
+                    <div class="col-xl-2 text-center future" id="day1">
+                        <!-- Card 2 inserted here -->
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-title">Tomorrow</h3>
 
-                        <div class="card-body">
-                            <img class="icon" src="">
+                            <div class="card-body">
+                                <img class="icon" src="">
 
-                            <p class="card-text"></p>
-                            <p class="high"></p>
-                            <!-- <p class="low"></p> -->
-                            <p class="humidity"></p>
-                            <p class="wind-speed"></p>
+                                <p class="card-text"></p>
+                                <p class="high"></p>
+                                <!-- <p class="low"></p> -->
+                                <p class="humidity"></p>
+                                <p class="wind-speed"></p>
+                            </div>
                         </div>
+                        <!-- End card 2 -->
                     </div>
-                    <!-- End card 2 -->
-                </div>
 
 
-                <div class="col-xl-2 text-center future" id="day2">
-                    <!-- Card 3 inserted here -->
-                    <div class="card" style="width: 18rem;">
-                        <h3 class="card-title">Day 3</h3>
+                    <div class="col-xl-2 text-center future" id="day2">
+                        <!-- Card 3 inserted here -->
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-title">Day 3</h3>
 
 
-                        <div class="card-body">
-                            <img class="icon" src="">
+                            <div class="card-body">
+                                <img class="icon" src="">
 
-                            <p class="card-text"></p>
-                            <p class="high"></p>
-                            <!-- <p class="low"></p> -->
-                            <p class="humidity"></p>
-                            <p class="wind-speed"></p>
+                                <p class="card-text"></p>
+                                <p class="high"></p>
+                                <!-- <p class="low"></p> -->
+                                <p class="humidity"></p>
+                                <p class="wind-speed"></p>
 
+                            </div>
                         </div>
+                        <!-- End card 3 -->
                     </div>
-                    <!-- End card 3 -->
-                </div>
 
-                <div class="col-xl-2 text-center future" id="day3">
-                    <!-- Card 4 inserted here -->
-                    <div class="card" style="width: 18rem;">
-                        <h3 class="card-title">Day 4</h3>
+                    <div class="col-xl-2 text-center future" id="day3">
+                        <!-- Card 4 inserted here -->
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-title">Day 4</h3>
 
-                        <div class="card-body">
-                            <img class="icon" src="">
+                            <div class="card-body">
+                                <img class="icon" src="">
 
-                            <p class="card-text"></p>
-                            <p class="high"></p>
-                            <!-- <p class="low"></p> -->
-                            <p class="humidity"></p>
-                            <p class="wind-speed"></p>
+                                <p class="card-text"></p>
+                                <p class="high"></p>
+                                <!-- <p class="low"></p> -->
+                                <p class="humidity"></p>
+                                <p class="wind-speed"></p>
 
+                            </div>
                         </div>
+                        <!-- End card 4 -->
                     </div>
-                    <!-- End card 4 -->
-                </div>
 
-                <div class="col-xl-2 text-center future" id="day4">
-                    <!-- Card 4 inserted here -->
-                    <div class="card" style="width: 18rem;">
-                        <h3 class="card-title">Day 5</h3>
+                    <div class="col-xl-2 text-center future" id="day4">
+                        <!-- Card 4 inserted here -->
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-title">Day 5</h3>
 
-                        <div class="card-body">
-                            <img class="icon" src="">
+                            <div class="card-body">
+                                <img class="icon" src="">
 
-                            <p class="card-text"></p>
-                            <p class="high"></p>
-                            <!-- <p class="low"></p> -->
-                            <p class="humidity"></p>
-                            <p class="wind-speed"></p>
+                                <p class="card-text"></p>
+                                <p class="high"></p>
+                                <!-- <p class="low"></p> -->
+                                <p class="humidity"></p>
+                                <p class="wind-speed"></p>
 
+                            </div>
                         </div>
+                        <!-- End card 5 -->
                     </div>
-                    <!-- End card 5 -->
-                </div>
 
-                <div class="col-xl-2 text-center future" id="day5">
-                    <!-- Card 4 inserted here -->
-                    <div class="card" style="width: 18rem;">
-                        <h3 class="card-title">Day 6</h3>
+                    <div class="col-xl-2 text-center future" id="day5">
+                        <!-- Card 4 inserted here -->
+                        <div class="card" style="width: 18rem;">
+                            <h3 class="card-title">Day 6</h3>
 
-                        <div class="card-body">
-                            <img class="icon" src="">
+                            <div class="card-body">
+                                <img class="icon" src="">
 
-                            <p class="card-text"></p>
-                            <p class="high"></p>
-                            <!-- <p class="low"></p> -->
-                            <p class="humidity"></p>
-                            <p class="wind-speed"></p>
+                                <p class="card-text"></p>
+                                <p class="high"></p>
+                                <!-- <p class="low"></p> -->
+                                <p class="humidity"></p>
+                                <p class="wind-speed"></p>
 
+                            </div>
                         </div>
+                        <!-- End card 6 -->
                     </div>
-                    <!-- End card 6 -->
                 </div>
-            </div>
             </section>
 
         </div>
