--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     <div id="forecast-display col">
                         <!-- <h2 class="city-name text-center">Name of City</h2> -->
                         <!-- The width property is needed here to work with the container fluid property that allows the content to stretch across the screen, but overflows the area.  This limits the element to make it display on screen. -->
-                        <div class="row p-4 w-75">
+                        <div class="row p-4 min-vw-75">
                             <div class="col text-center forecast-card" id="display-current-weather">
                                 <!-- A card was inserted into the container -->
                                 <!-- The size of this card was changed from the default of 18rem to make the current weather display larger. -->
-                                <div class="card" style="width: 100%;">
+                                <div class="card" >
                                     <h3 class="card-title">Current Weather Conditions</h3>
                                     <p class="date-time"></p>
                                     <span><img class="icon" src=""></span>
@@ -89,7 +89,7 @@
                 </div>
             </section>
 
-            <section>
+            <section id="extended-forecast">
                 <h2>Extended Forecast</h2>
                 <div class="row justify-content-center">
                     <div class="col-xl-2 text-center future" id="day1">
