change to gradients and flex properties

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
             <section id="extended-forecast">
                 <h2>Extended Forecast</h2>
-                <div class="row justify-content-center">
-                    <div class="col-xl-2 text-center future" id="day1">
+                <div class="row justify-content-center-lg">
+                    <div class="col-xl-2 col-md-6 text-center future" id="day1">
                         <!-- Card 2 inserted here -->
                         <div class="card" style="width: 18rem;">
                             <h3 class="card-title">Tomorrow</h3>
@@ -111,10 +111,10 @@
                     </div>
 
 
-                    <div class="col-xl-2 text-center future" id="day2">
+                    <div class="col-xl-2 col-md-6 text-center future" id="day2">
                         <!-- Card 3 inserted here -->
                         <div class="card" style="width: 18rem;">
-                            <h3 class="card-title">Day 3</h3>
+                            <h3 class="card-title">Day 2</h3>
 
 
                             <div class="card-body">
@@ -131,10 +131,10 @@
                         <!-- End card 3 -->
                     </div>
 
-                    <div class="col-xl-2 text-center future" id="day3">
+                    <div class="col-xl-2 col-md-6 text-center future" id="day3">
                         <!-- Card 4 inserted here -->
                         <div class="card" style="width: 18rem;">
-                            <h3 class="card-title">Day 4</h3>
+                            <h3 class="card-title">Day 3</h3>
 
                             <div class="card-body">
                                 <img class="icon" src="">
@@ -150,10 +150,10 @@
                         <!-- End card 4 -->
                     </div>
 
-                    <div class="col-xl-2 text-center future" id="day4">
+                    <div class="col-xl-2 col-md-6 text-center future" id="day4">
                         <!-- Card 4 inserted here -->
                         <div class="card" style="width: 18rem;">
-                            <h3 class="card-title">Day 5</h3>
+                            <h3 class="card-title">Day 4</h3>
 
                             <div class="card-body">
                                 <img class="icon" src="">
@@ -169,10 +169,10 @@
                         <!-- End card 5 -->
                     </div>
 
-                    <div class="col-xl-2 text-center future" id="day5">
+                    <div class="col-xl-2 col-md-6 text-center future" id="day5">
                         <!-- Card 4 inserted here -->
                         <div class="card" style="width: 18rem;">
-                            <h3 class="card-title">Day 6</h3>
+                            <h3 class="card-title">Day 5</h3>
 
                             <div class="card-body">
                                 <img class="icon" src="">
