changed flex properties of forecast cards

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Cody Burkholder" />
+    <meta name="author" content="Cody Burkholder">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -59,7 +59,7 @@
                         <!-- <h2 class="city-name text-center">Name of City</h2> -->
                         <!-- The width property is needed here to work with the container fluid property that allows the content to stretch across the screen, but overflows the area.  This limits the element to make it display on screen. -->
                         <div class="row p-4 min-vw-75">
-                            <div class="col text-center forecast-card" id="display-current-weather">
+                            <div class="col-lg-8 text-center forecast-card" id="display-current-weather">
                                 <!-- A card was inserted into the container -->
                                 <!-- The size of this card was changed from the default of 18rem to make the current weather display larger. -->
                                 <div class="card" >
@@ -91,7 +91,7 @@
 
             <section id="extended-forecast">
                 <h2>Extended Forecast</h2>
-                <div class="row justify-content-center-lg">
+                <div class="row justify-content-lg-center">
                     <div class="col-xl-2 col-md-6 text-center future" id="day1">
                         <!-- Card 2 inserted here -->
                         <div class="card" style="width: 18rem;">
