added additional styles

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </section>
 
             <section id="extended-forecast">
-                <h2>Extended Forecast</h2>
+                <h2 id="forecast-header">Extended Forecast</h2>
                 <div class="row justify-content-lg-center">
                     <div class="col-xl-2 col-md-6 text-center future" id="day1">
                         <!-- Card 2 inserted here -->
