--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <header>
-        <h1>Local Weather Forecast</h1>
+        <h1>It's Always Sunny In...</h1>
         <form action="https://api.openweathermap.org/data/2.5/weather?" id="search-form" class="text-start">
             <label for="city-input">Search for a City:</label>
             <input type="search" placeholder="City" id="city-input" name="q">
@@ -59,7 +59,7 @@
                     <div id="forecast-display col">
                         <!-- <h2 class="city-name text-center">Name of City</h2> -->
                         <!-- The width property is needed here to work with the container fluid property that allows the content to stretch across the screen, but overflows the area.  This limits the element to make it display on screen. -->
-                        <div class="row p-4 min-vw-75">
+                        <div class="row p-4 justify-content-lg-center">
                             <div class="col-lg-8 text-center forecast-card" id="display-current-weather">
                                 <!-- A card was inserted into the container -->
                                 <!-- The size of this card was changed from the default of 18rem to make the current weather display larger. -->
