updated style of current display

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div id="forecast-display col">
                         <!-- <h2 class="city-name text-center">Name of City</h2> -->
                         <!-- The width property is needed here to work with the container fluid property that allows the content to stretch across the screen, but overflows the area.  This limits the element to make it display on screen. -->
-                        <div class="row p-4 justify-content-lg-center">
+                        <div class="row justify-content-lg-center">
                             <div class="col-lg-8 text-center forecast-card" id="display-current-weather">
                                 <!-- A card was inserted into the container -->
                                 <!-- The size of this card was changed from the default of 18rem to make the current weather display larger. -->
